﻿v2.1.3 (Codename: bored)
- Replaced icons from Fugue library
- Small UI updates
-------------------------------------------------------------
v2.1.2
- All icons except the app's are now from the defaulticon library
- Added buttons and listboxes help/info tooltips
- Added Metacritic.com and TV.com to the search engines in file list menu
- Added shortcuts for various actions
- Changed EOLfrom Win to UNIX format (~3% smaller backup and db size)
- Cleaned up code
-------------------------------------------------------------
v2.1.1 (5/5/2012)
- Updated reset window to work with all component saved settings
- Moved the changelog from the resources to dedicated txt file
- Fixed bug not saving all settings localy
- Cleaned up code
- Completed code documentation
-------------------------------------------------------------
v2.1.0 (4/5/2012)
- Fixed bug in reset window procedure updating location before size
- Fixed bug updating status bar twice when editing disc
- Improved scan process performance (a lot)
- Added auto suggest/append in the scan path combobox
- Added ability to drop all tables/data to start fresh
- Added folder choose dialog for scan path *
- Added local session storage *

* These features were in the java version but not in the first c# version 
-------------------------------------------------------------
v2.0.0
- Renamed application to Cavebox
- Ported application to C# - SQLite
-------------------------------------------------------------
v1.5.0
- Redesigned from scratch to get rid of the Swing Application Framework
- Updated H2 Database Engine to v1.3.165
-------------------------------------------------------------
v1.4.1
- Updated to JDK 7
- UI Improvements
- Updated H2 Database Engine to v1.3.161
-------------------------------------------------------------
v1.4.0
- Fixed Bug in the text highlighting
- Fixed Bug in box edit not updating status bar
- Updated filter to work on the fly
- Updated forms to work on Enter key press
- Updated status bar