@@ -32,5 +32,15 @@ namespace Cavebox.Lib
 		/// Magic get set Key
 		/// </summary>
 		public int Key {get; set;}
+		
+		/// <summary>
+		/// We don't really need this but that stupid checklistbox doesn't support databinding so
+		/// we must add this to display propertly the list's display member
+		/// </summary>
+		/// <returns></returns>
+		public override string ToString()
+		{
+			return Value;
+		}
 	}
 }
