@@ -10,6 +10,12 @@
     <Setting Name="CakeboxDiscSplitterDistance" Type="System.Int32" Scope="User" Provider="PortableSettingsProvider" Roaming="false">
       <Value Profile="(Default)">258</Value>
     </Setting>
+    <Setting Name="DiscsOrderBy" Type="System.Int32" Scope="User" Provider="PortableSettingsProvider" Roaming="false">
+      <Value Profile="(Default)">1</Value>
+    </Setting>
+    <Setting Name="DiscsOrderWay" Type="System.Int32" Scope="User" Provider="PortableSettingsProvider" Roaming="false">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
     <Setting Name="FileListSplitterDistance" Type="System.Int32" Scope="User" Provider="PortableSettingsProvider" Roaming="false">
       <Value Profile="(Default)">310</Value>
     </Setting>
