@@ -16,6 +16,12 @@
 			<setting name="CakeboxDiscSplitterDistance" serializeAs="String">
 				<value>258</value>
 			</setting>
+			<setting name="DiscsOrderBy" serializeAs="String">
+				<value>1</value>
+			</setting>
+			<setting name="DiscsOrderWay" serializeAs="String">
+				<value>0</value>
+			</setting>
 			<setting name="FileListSplitterDistance" serializeAs="String">
 				<value>310</value>
 			</setting>
